--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^6.8.1",
     "mongoose-autopopulate": "^1.0.0"
   }
